--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,10 @@
       content="Welcome to my developer portfolio built with React and Tailwind."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://nileshjaiswal.vercel.app" />
+    <meta
+      property="og:url"
+      content="https://nilesh-jaiswal-portfolio.vercel.app/"
+    />
     <meta
       property="og:image"
       content="https://nileshjaiswal.vercel.app/NileshJaiswal.png"
