--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="6TvuAVilopnta3GVLqbvjS8GTJ5HOq4VEWDv6tP_dv4"
+    />
     <title>Nilesh Jaiswal | Portfolio</title>
   </head>
   <body>
