--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     />
     <meta
       property="og:image"
-      content="https://nileshjaiswal.vercel.app/NileshJaiswal.png"
+      content="https://nilesh-jaiswal-portfolio.vercel.app/NileshJaiswal.png"
     />
 
     <!-- Favicon -->
