--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
       property="og:image"
       content="https://nilesh-jaiswal-portfolio.vercel.app/NileshJaiswal.png"
     />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <!-- Favicon -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
